@@ -66,6 +66,7 @@
 
     <target name="build"
             depends="
+    			compile,
                 init,
                 launcher,
                 runtime,
@@ -75,6 +76,118 @@
     			staging">
 
     	<echo message="[------- アプリケーション構築完了 -------]"/>
+
+    </target>
+
+	<!-- ===================================================== -->
+    <!-- コンパイル -->
+    <!-- ===================================================== -->
+
+	<target name="compile"
+            depends="
+                compile-apt,
+				compile-app">
+
+		<echo message="[------- アプリケーションコンパイル完了 -------]"/>
+
+    </target>
+
+	<target name="compile-apt">
+
+		<!-- コンパイル事前処理 -->
+		<mkdir dir="${project.build.directory}/apt"/>
+
+		<!-- アノテーションプロセッサーコンパイル -->
+		<javac
+		    srcdir="${basedir}/src/apt"
+			destdir="${project.build.directory}/apt"
+		    source="${maven.compiler.source}"
+		    target="${maven.compiler.target}"
+		    encoding="${project.build.sourceEncoding}"
+		    includeantruntime="false"
+			fork="true">
+
+		 	<classpath>
+		        <pathelement location="${project.build.directory}/application.jar"/>
+		    </classpath>
+
+		</javac>
+
+		<!-- リソースファイル格納 -->
+		<copy todir="${project.build.directory}/apt">
+			<fileset dir="${basedir}/src/apt"/>
+        </copy>
+
+		<!-- Jarファイル生成 -->
+	 	<jar
+	        destfile="${project.build.directory}/apt/apt.jar"
+	        basedir="${project.build.directory}/apt"
+	 	/>
+
+    </target>
+
+	<target name="compile-app">
+
+		<!-- コンパイル事前処理 -->
+		<mkdir dir="${project.build.directory}/app"/>
+		<copy todir="${project.build.directory}/deps">
+			<fileset dir="${project.build.directory}">
+                <include name="application.jar"/>
+            </fileset>
+		</copy>
+
+		<!-- リソースファイル格納 -->
+		<copy todir="${project.build.directory}/app">
+		    <fileset dir="${basedir}/src/main/resources"/>
+		</copy>
+
+		<!-- アプリケーションコンパイル -->
+		<javac
+		    srcdir="${project.build.sourceDirectory}"
+			destdir="${project.build.directory}/app"
+		    source="${maven.compiler.source}"
+		    target="${maven.compiler.target}"
+		    release="${maven.compiler.release}"
+		    encoding="${project.build.sourceEncoding}"
+		    includeantruntime="false"
+			fork="true">
+
+			<modulepath>
+		        <pathelement location="${project.build.directory}/deps"/>
+		    </modulepath>
+
+			<compilerarg value="-processorpath"/>
+			<compilerarg value="${project.build.directory}/deps/application-core-${project.version}.jar:${project.build.directory}/apt/apt.jar"/>
+			<compilerarg value="-proc:full"/>
+
+			<compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"/>
+			<compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"/>
+			<compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"/>
+			<compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED"/>
+			<compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED"/>
+			<compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED"/>
+			<compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"/>
+			<compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"/>
+			<compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"/>
+			<compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"/>
+
+		</javac>
+
+		<!-- ライセンスファイル対応 -->
+        <copy todir="${project.build.directory}/classes/META-INF/license">
+            <fileset dir="${basedir}/../">
+                <include name="LICENSE"/>
+                <include name="THIRD-PARTY-NOTICES.txt"/>
+                <include name="licenses/*"/>
+            </fileset>
+        </copy>
+
+		<!-- Jarファイル生成 -->
+		<delete dir="${project.build.directory}/library/application.jar"/>
+	 	<jar
+	        destfile="${project.build.directory}/library/application.jar"
+	        basedir="${project.build.directory}/app"
+	 	/>
 
     </target>
 
